--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-03-16.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-03-16.md
@@ -2,12 +2,12 @@
 description: Scene7查看器5.4.2发行说明
 solution: Experience Manager
 title: Scene7查看器5.4.2发行说明
-feature: Dynamic Media Classic，查看器，SDK/API
+feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: dde851f5-0766-4bd9-84b3-2600dd5f5700
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: 191d3e7cc4cd370e1e1b6ca5d7e27acd3ded7b6c
 workflow-type: tm+mt
-source-wordcount: '826'
+source-wordcount: '820'
 ht-degree: 0%
 
 ---
@@ -25,7 +25,7 @@ ht-degree: 0%
 
 建议您在我们的暂存环境中测试查看器。 以下网站提供了有关如何设置系统以访问我们的暂存服务器的说明：
 
-[http://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](http://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
+[https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
 
 在将计算机设置为访问暂存服务器后，您可以检查网站以测试升级。 对于使用现成查看器的客户，最佳实践是针对我们的标准暂存服务器和s7is1-preview-staging.scene7.com进行测试。
 
