--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-18-13.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-18-13.md
@@ -2,12 +2,12 @@
 description: Scene7查看器4.9.2中的增强功能、错误修复和已知问题
 solution: Experience Manager
 title: Scene7查看器4.9.2发行说明
-feature: Dynamic Media Classic，查看器，SDK/API
+feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: fb79049d-b135-41c4-ae63-b7b74697b956
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: 191d3e7cc4cd370e1e1b6ca5d7e27acd3ded7b6c
 workflow-type: tm+mt
-source-wordcount: '1112'
+source-wordcount: '1106'
 ht-degree: 0%
 
 ---
@@ -93,7 +93,7 @@ Scene7查看器4.9.2中的增强功能、错误修复和已知问题
 * 如果为Flash Player6编译了“服务器支持”，则无法加载查看器外观。 解决方法是编译Flash Player7。
 * Macintosh操作系统和Flash Player版本10,0,32,18:解决方法取决于JavaScript桥，而不是LocalConnection，以便在Flex和Flash之间进行通信。 因此，必须将Flex应用程序嵌入到HTML包装器中。
 * 目前，Flash查看器仅支持Flash7的SWF。
-* 由于Java v.1.5.0_06存在问题，该版本的Java不支持服务器组件。 [http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6274990](http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6274990)。
+* 由于Java v.1.5.0_06存在问题，该版本的Java不支持服务器组件。 [https://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6274990](https://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6274990)。
 * 对于外观自定义URL参数，外观URL中的参数必须进行URL编码。
 * 当ASCII字符在名称中具有扩展字符的图像集发送到查看器时，其URL必须编码两次，否则FVCTX请求会失败，因为Flash播放器在将名称传递到查看器代码之前会解码该名称。
 * 如果嵌入HTML页面在查看器后具有重要内容，则查看器可能会在页面完全加载之前调用JavaScript函数。 这可能会中止页面加载。 建议的解决方法是使用onLoad事件处理程序将初始化查看器延迟到页面加载完成后。
@@ -108,6 +108,6 @@ Scene7查看器4.9.2中的增强功能、错误修复和已知问题
 * 安全问题会阻止查看器从同一域上的其他服务器读取，除非两个URL都是完全限定的域名，或者“跨域策略”被专门设置为允许从该服务器访问。
 * 使用Flash7的新安全功能，如果查看者尝试从查看者所在的同一域上的其他服务器读取内容（即，查看者将被`infoServerUrl`、`searchEngineUrl`或`serverUrl parameters`中的路径重定向），则安全警报会通知用户此事实并询问您是否要允许此操作，除非将“跨域策略”设置为允许从该服务器访问。
 
-   有关如何设置“跨域策略”的更多信息，请参阅以下文章：[http://kb2.adobe.com/cps/142/tn_14213.html](http://kb2.adobe.com/cps/142/tn_14213.html)。
+   有关如何设置“跨域策略”的更多信息，请参阅以下文章：[https://kb2.adobe.com/cps/142/tn_14213.html](https://kb2.adobe.com/cps/142/tn_14213.html)。
 
-* 在HTTPS页面中嵌入查看器时生成异常错误。 问题是由于与服务器日志记录通信所致。 有关更多信息：[http://helpx.adobe.com/flash-player/kb/flash-player-issues-secure-sockets.html](http://helpx.adobe.com/flash-player/kb/flash-player-issues-secure-sockets.html)
+* 在HTTPS页面中嵌入查看器时生成异常错误。 问题是由于与服务器日志记录通信所致。 有关更多信息：[https://helpx.adobe.com/flash-player/kb/flash-player-issues-secure-sockets.html](https://helpx.adobe.com/flash-player/kb/flash-player-issues-secure-sockets.html)
