--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-07-08-19.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-07-08-19.md
@@ -2,12 +2,12 @@
 description: 查看器发行说明(5.13.1)
 solution: Experience Manager
 title: 查看器发行说明(5.13.1)
-feature: Dynamic Media Classic，查看器，SDK/API
+feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 266805aa-29a6-4e95-a7b8-43d95beeea36
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: c99aac44711852d8ac661878e11ce0b19d3dbf60
 workflow-type: tm+mt
-source-wordcount: '556'
+source-wordcount: '554'
 ht-degree: 0%
 
 ---
@@ -37,7 +37,7 @@ ht-degree: 0%
    * genericZoomMobile
    * mixedMedia
 
-* AEM Dynamic Media查看器
+* Adobe Experience Manager Dynamic Media查看器
 
    * 轮播查看器
    * InteractiveImage
@@ -55,7 +55,7 @@ ht-degree: 0%
 ## 5.13.1的错误修复 {#section-50e7ea1e01dd4e1fa9c8b3e00eb002b4}
 
 * 解决了显示不正确的长视频持续时间的问题。
-* 解决了在全屏视图上，页面在Apple设备（在iOS 12及更高版本上运行）上滚动的问题。
+* 解决了在Apple设备（在iOS 12及更高版本上运行）上滚动页面的全屏视图问题。
 
 ## 5.13.1的已知问题和限制 {#section-af67bc1734844f31a89a09004b558c6e}
 
@@ -96,13 +96,13 @@ ht-degree: 0%
 
 **HTML5视频**
 
-* 海报图像可能遇到`max size`错误。 您可能需要提高图像提供发布的限制设置。
+* 海报图像可能遇到`max size`错误。 在这种情况下，必须提高“图像提供发布”的限制设置。
 * 如果从外部服务器(而非Dynamic Media服务器)提供托管HTML页面，则视频字幕需要设置公司规则集。 请联系技术支持以获取帮助。
 * 由于缓冲，Analytics跟踪可能会报告不正确的播放百分比。
-* 在iPad或Android设备上，可能会显示黑帧，而不是海报图像。
-* 在iPad或Android设备上，加载查看器期间，屏幕上可能会闪烁黑帧。
+* 在iPad或Android™设备上，可能会显示黑帧，而不是海报图像。
+* 在iPad或Android™设备上，加载查看器期间，屏幕上可能会闪烁黑帧。
 * 在iPad设备上，当背景设置为白色/透明时，VideoPlayer组件的侧边会显示黑色边框。
 * 在iPad上，使用iOS 7时，视频的最后一帧可能会失真。
 * 在Chrome、Firefox和Internet Explorer浏览器上，在HLS流模式下的视频搜寻期间，可能会偶尔出现宏阻塞。
-* 首次访客时，海报图像可能无法在Microsoft Edge浏览器中显示。
+* 首次访客时，海报图像可能无法在Microsoft® Edge浏览器中显示。
 * 使用渐进式播放时，在Internet Explorer 9中加载视频后，海报图像可能会隐藏。
