--- a/help/aem-viewers-ref/c-release-notes/c-rn-01-13-21.md
+++ b/help/aem-viewers-ref/c-release-notes/c-rn-01-13-21.md
@@ -1,11 +1,11 @@
 ---
-title: 查看器发行说明(5.15.3)
-description: Dynamic Media查看器的发行说明。
+title: Dynamic Media查看器发行说明(5.15.3)
+description: AdobeDynamic Media查看器的发行说明。
 solution: Experience Manager
-feature: Dynamic Media Classic，查看器，SDK/API
+feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 00a1069f-8cfe-41b4-aecd-33c2b6f9bcca
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: c99aac44711852d8ac661878e11ce0b19d3dbf60
 workflow-type: tm+mt
 source-wordcount: '626'
 ht-degree: 0%
@@ -31,7 +31,7 @@ ht-degree: 0%
    * VideoViewer
    * ZoomViewer
 
-* **AEM Dynamic Media查看器**
+* **Adobe Experience Manager Dynamic Media查看器**
 
    * 轮播查看器
    * DimensionalViewer
@@ -108,13 +108,13 @@ ht-degree: 0%
 
 ### HTML5视频 {#html5-video}
 
-* 海报图像可能遇到`max size`错误。 您可能需要提高图像提供发布的限制设置。
+* 海报图像可能遇到`max size`错误。 在这种情况下，必须提高“图像提供发布”的限制设置。
 * 如果从外部服务器(而非Dynamic Media服务器)提供托管HTML页面，则视频字幕需要设置公司规则集。 请联系技术支持以获取帮助。
 * 由于缓冲，Analytics跟踪可能会报告不正确的播放百分比。
-* 在iPad或Android设备上，可能会显示黑帧，而不是海报图像。
-* 在iPad或Android设备上，加载查看器期间，屏幕上可能会闪烁黑帧。
+* 在iPad或Android™设备上，可能会显示黑帧，而不是海报图像。
+* 在iPad或Android™设备上，加载查看器期间，屏幕上可能会闪烁黑帧。
 * 在iPad设备上，当背景设置为白色/透明时，VideoPlayer组件的侧边会显示黑色边框。
 * 在iPad上，使用iOS 7时，视频的最后一帧可能会失真。
 * 在Chrome、Firefox和Internet Explorer浏览器上，在HLS流模式下的视频搜寻期间，可能会偶尔出现宏阻塞。
-* 首次访客时，海报图像可能无法在Microsoft Edge浏览器中显示。
+* 首次访客时，海报图像可能无法在Microsoft® Edge浏览器中显示。
 * 使用渐进式播放时，在Internet Explorer 9中加载视频后，海报图像可能会隐藏。
