--- a/help/aem-viewers-ref/c-release-notes/c-rn-04-06-21.md
+++ b/help/aem-viewers-ref/c-release-notes/c-rn-04-06-21.md
@@ -1,17 +1,17 @@
 ---
-title: 查看器发行说明(5.16.1)
-description: Dynamic Media查看器的发行说明。
+title: Dynamic Media查看器发行说明(5.16.1)
+description: AdobeDynamic Media查看器的发行说明。
 solution: Experience Manager
-feature: Dynamic Media Classic，查看器，SDK/API
+feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 hide: true
 hidefromtoc: true
 robots: noindex
 googlebot: noindex
 exl-id: 636c8c11-9c79-41f3-8101-29fca0fab074
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: c99aac44711852d8ac661878e11ce0b19d3dbf60
 workflow-type: tm+mt
-source-wordcount: '624'
+source-wordcount: '621'
 ht-degree: 0%
 
 ---
@@ -64,7 +64,7 @@ ht-degree: 0%
 * 添加了对清理URL配置参数的支持。 现在，弹出查看器会忽略查询字符串中定义的URL配置参数。 如果参数值中的域与基本查看器域不匹配或不属于允许的域列表，则可以执行此功能。
 * 已将产品品牌更新至Adobe Experience Viewer。
 * 修复了在CSS中禁用某个子组件时，SocialShare下拉列表中的键盘导航问题。
-* 修复了在iOS9和旧版设备上使用海报时出现的JavaScript™错误。
+* 修复了在iOS9和更旧设备上使用海报时出现的JavaScript错误。
 * 修复了当前视频播放时间报告错误为NaN的问题。<!--  (CQ-4310148) -->
 
 ## Adobe客户关怀 {#customer-care}
