--- a/help/s7-release-notes/s7rn2017.md
+++ b/help/s7-release-notes/s7rn2017.md
@@ -4,9 +4,9 @@ description: “AdobeDynamic Media Classic的最新发行说明，它是Adobe Ex
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 2826138f-799e-4f2c-8993-0cfdb9328406
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: 06ea55bebbb16de643fec96147ec2b648bb5783b
 workflow-type: tm+mt
-source-wordcount: '1376'
+source-wordcount: '1375'
 ht-degree: 0%
 
 ---
@@ -54,7 +54,7 @@ Adobe很兴奋地宣布推出HTTP/2内容交付功能，这将带来性能提升
 
 ## 查看器（图像提供5.8.1） {#section-e1940d4cedc641bca93236b4c1e0cfa7}
 
-有关完整文档，请参阅[查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/home.html)。
+有关完整文档，请参阅[查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en)。
 
 **图像提供5.8.1的新增功能**
 
