--- a/help/s7-release-notes/s7rn610.md
+++ b/help/s7-release-notes/s7rn610.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: dd998249-1986-491f-b0ab-554ab414f602
-source-git-commit: 191d3e7cc4cd370e1e1b6ca5d7e27acd3ded7b6c
+source-git-commit: 06ea55bebbb16de643fec96147ec2b648bb5783b
 workflow-type: tm+mt
-source-wordcount: '2337'
+source-wordcount: '2339'
 ht-degree: 1%
 
 ---
@@ -236,7 +236,7 @@ ht-degree: 1%
 
 新增功能和增强功能
 
-另请参阅[查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/home.html)。
+另请参阅[查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en)。
 
 * 在eCatalog查看器中添加了对“打印”、“下载”和“收藏”的支持。
 * 添加了使用getComponent API检索ParameterManager的功能。
