--- a/help/s7-release-notes/s7rn68.md
+++ b/help/s7-release-notes/s7rn68.md
@@ -1,13 +1,13 @@
 ---
+title: Scene7 Publishing System 6.8发行说明（2014年5月）
 description: “最新发行说明描述了Adobe Scene7 Publishing System 6.8的最新功能、增强功能和修复，它是Adobe Marketing Cloud中Adobe Experience Manager解决方案的一部分。”
 solution: Experience Manager
-title: Scene7 Publishing System 6.8发行说明（2014年5月）
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: f930fbf8-2aa4-4e6e-ad8d-4f0a0c76ff0e
-source-git-commit: c58199c5884c368e92e50fe0ef9d6ad523e36266
+source-git-commit: 06ea55bebbb16de643fec96147ec2b648bb5783b
 workflow-type: tm+mt
-source-wordcount: '1895'
+source-wordcount: '1897'
 ht-degree: 0%
 
 ---
@@ -75,7 +75,7 @@ ht-degree: 0%
 * 为ZoomView设置初始缩放区域。
 * 当无法缩放时，ZoomView将隐藏`IconEffect`组件
 
-另请参阅[查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/home.html)。
+另请参阅[查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en)。
 
 <!-- **HTML5 Viewers SDK**
 
