--- a/help/s7-release-notes/s7rn69.md
+++ b/help/s7-release-notes/s7rn69.md
@@ -5,9 +5,9 @@ title: Scene7 Publishing System 6.9发行说明（2014年10月）
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 5f120925-d387-4bac-8a4d-f67a198b2b8e
-source-git-commit: 191d3e7cc4cd370e1e1b6ca5d7e27acd3ded7b6c
+source-git-commit: 06ea55bebbb16de643fec96147ec2b648bb5783b
 workflow-type: tm+mt
-source-wordcount: '1894'
+source-wordcount: '1896'
 ht-degree: 1%
 
 ---
@@ -139,7 +139,7 @@ ZoomView
 
 新增功能和增强功能
 
-另请参阅[Scene7查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/home.html)。
+另请参阅[Scene7查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en)。
 
 * 更新了对Internet Explorer 11的支持
 * 更改了查看器以使用“跟踪请求”而不是“页面请求”进行Adobe Analytics跟踪
