Updated by task 'AutomatedMDTask_1642013222451_TM-MT_1642013242622'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/dynamic-media-developer-resources.en/commit/169e21547dcb0db2b7c5934230a6557e540c911a

--- a/help/s7-release-notes/s7rn60.md
+++ b/help/s7-release-notes/s7rn60.md
@@ -1,13 +1,13 @@
 ---
+title: Scene7 Publishing System 6.0发行说明
 description: “发行说明描述了Adobe Scene7 Publishing System 6.0(Adobe Marketing Cloud中Adobe Experience Manager解决方案的一部分)的功能、增强功能和修复。”
 solution: Experience Manager
-title: Scene7 Publishing System 6.0发行说明
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 3ce75efb-3761-4991-bb4f-beeaab3f2633
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: 50dddf148345d2ca5243d5d7108fefa56d23dad6
 workflow-type: tm+mt
-source-wordcount: '1083'
+source-wordcount: '1079'
 ht-degree: 6%
 
 ---
@@ -31,7 +31,7 @@ ht-degree: 6%
 
 **资产管理和发布**
 
-* 改进了资产发布工作流程。<!-- [More information](http://help.adobe.com/en_US/scene7/using/WS3673AD39-098B-4f08-8A24-CA51261B7366.html). -->
+* 改进了资产发布工作流程。 <!-- [More information](http://help.adobe.com/en_US/scene7/using/WS3673AD39-098B-4f08-8A24-CA51261B7366.html). -->
 * 改进了模板预览的可用性。 有关更多信息，请参阅以下内容：
 
 <!--   [Configuring default viewers](http://help.adobe.com/en_US/scene7/using/WS98ca2e6790647c06-76b2d0e0135685cd4a8-8000.html)
@@ -48,9 +48,9 @@ ht-degree: 6%
 * 通过向单个eVideo资产中添加字幕，将视频的覆盖范围扩展到全球市场。
 * 添加了“嵌入代码”以简化查看器的部署。
 
-   通过使用[!DNL Embed Code]功能，可以查看选定资产类型的查看器代码。 您也可以将代码复制到剪贴板中，以便可以将其粘贴到网页中以部署查看器。在“嵌入代码”对话框中不允许编辑代码。 .
+   使用 [!DNL Embed Code] 功能允许您查看选定资产类型的查看器代码。 您也可以将代码复制到剪贴板中，以便可以将其粘贴到网页中以部署查看器。在“嵌入代码”对话框中不允许编辑代码。 .
 
-   当您打开[!DNL Preview: Viewer List]页面或[!DNL Detail View]中[!DNL URLs]面板以查看以下任何资产类型时，即可使用[!DNL Embed Code]功能：
+   的 [!DNL Embed Code] 功能在您打开 [!DNL Preview: Viewer List] 页面或 [!DNL URLs] 面板 [!DNL Detail View] 对于以下任何资产类型：
 
    * 通用查看器
    * Zoom
@@ -65,7 +65,7 @@ ht-degree: 6%
 
 <!--   [More information](http://help.adobe.com/en_US/scene7/using/WS98ca2e6790647c06-2ce305113564963202-7fff.html) -->
 
-* HTML5 SDK中提供了大量新的查看器组件。 （有关更多详细信息，请参阅安装程序随附的HTML 5 SDK自述文件。）
+* HTML5 SDK中提供了大量新的查看器组件。 (有关更多详细信息，请参阅安装程序随附的HTML5 SDK自述文件。)
 * 增强的FlashSDK。 (有关更多详细信息，请参阅安装程序附带的FlashSDK自述文件。)
 * 新的FlashAS3查看器包括以下查看器：
 
@@ -84,9 +84,9 @@ ht-degree: 6%
 
 * 增加了对查看器的全球化支持，包括文本和图形的本地化。 请参阅SDK安装程序随附的Flash或HTML5查看器SDK用户指南。
 * 通过嵌入式视频和旋转查看器为eCatalog增加了交互性。
-* 简化了从Adobe Developer Connection访问Flash和HTML5查看器SDK的过程。<!-- [More information](http://help.adobe.com/en_US/scene7/using/WSd4272150f67705c11b002eec12fcba4dee6-8000.html). -->
-* 扩展了通用查看器配置文件 — 现在，每种查看器类型可以有多个配置文件。<!-- [More information](http://help.adobe.com/en_US/scene7/using/WS1c46793299cf21d73076df86131b02b67e8-8000.html). -->
-* 改进了功能电话的图像传送，使用设备检测根据屏幕分辨率和文件大小限制动态设置大小。<!-- [More information](http://help.adobe.com/en_US/scene7/using/WS1c46793299cf21d7-6ad692c9131d90d137a-8000.html). -->
+* 简化了从Adobe Developer Connection访问Flash和HTML5查看器SDK的过程。 <!-- [More information](http://help.adobe.com/en_US/scene7/using/WSd4272150f67705c11b002eec12fcba4dee6-8000.html). -->
+* 扩展了通用查看器配置文件 — 现在，每种查看器类型可以有多个配置文件。 <!-- [More information](http://help.adobe.com/en_US/scene7/using/WS1c46793299cf21d73076df86131b02b67e8-8000.html). -->
+* 改进了功能电话的图像传送，使用设备检测根据屏幕分辨率和文件大小限制动态设置大小。 <!-- [More information](http://help.adobe.com/en_US/scene7/using/WS1c46793299cf21d7-6ad692c9131d90d137a-8000.html). -->
 
 **工作流集成**
 
@@ -99,20 +99,20 @@ ht-degree: 6%
 
 **内容模板（动态横幅和Web-To-Print）**
 
-* 模板集 — 可以直接从Scene7发布系统中轻松管理Scene7基本模板的不同变体的发布，从而无需更改页面代码中的URL。<!-- [More information](http://help.adobe.com/en_US/scene7/using/WSd968ca97bf00cf72-5eede3a113268dc80f5-8000.html).  -->
+* 模板集 — 可以直接从Scene7发布系统中轻松管理Scene7基本模板的不同变体的发布，从而无需更改页面代码中的URL。 <!-- [More information](http://help.adobe.com/en_US/scene7/using/WSd968ca97bf00cf72-5eede3a113268dc80f5-8000.html).  -->
 * 基本模板编辑器“开发人员模式” — 直接在Scene7 Publishing System中编辑复杂的模板URL，并使用内置的预览即时测试结果。
-* 将动态横幅Flash源内容(FLA)动态编译为GIF动画影片，包括高级帧管理。<!-- [More information](http://help.adobe.com/en_US/scene7/using/WSd968ca97bf00cf72-5eedd3a113268dc80f4-8000.html).  -->
-* 在Scene7 Web to Print在线工作流中动态地处理使用Adobe Illustrator创建的变形扭曲。<!-- [More information](http://help.adobe.com/en_US/scene7/using/WSef8d5860223939e2-d19776312a7267a200-8000.html#WSd968ca97bf00cf72-5eedd3a113268dc80f5-8000). -->
+* 动态编译动态横幅Flash源内容(FLA)以生成动画GIF影片，包括高级帧管理。 <!-- [More information](http://help.adobe.com/en_US/scene7/using/WSd968ca97bf00cf72-5eedd3a113268dc80f4-8000.html).  -->
+* 在Scene7 Web to Print在线工作流中动态地处理使用Adobe Illustrator创建的变形扭曲。 <!-- [More information](http://help.adobe.com/en_US/scene7/using/WSef8d5860223939e2-d19776312a7267a200-8000.html#WSd968ca97bf00cf72-5eedd3a113268dc80f5-8000). -->
 
 **eVideo**
 
 * 改进了转码视频的性能周转时间。
-* 通过使用与源视频相同的fps简化了桌面视频预设。<!-- [More information](http://help.adobe.com/en_US/scene7/using/WSE86ACF2B-BD50-4c48-A1D7-9CD4405B62D0.html#WS1c46793299cf21d7-39fae9c1131ba8968f7-7fff).  -->
+* 通过使用与源视频相同的fps简化了桌面视频预设。 <!-- [More information](http://help.adobe.com/en_US/scene7/using/WSE86ACF2B-BD50-4c48-A1D7-9CD4405B62D0.html#WS1c46793299cf21d7-39fae9c1131ba8968f7-7fff).  -->
 * 自动生成自适应视频集，以简化通过单个通用URL部署视频的过程。 更多信息. <!-- [More information](http://help.adobe.com/en_US/scene7/using/WS1c46793299cf21d7-6ad692c9131d90d137a-8000.html).  -->
-* 为桌面增加了自适应流，以便根据用户的网络连接动态切换视频质量。<!-- [More information](http://help.adobe.com/en_US/scene7/using/WS1c46793299cf21d7-6ad692c9131d90d137a-8000.html).  -->
-* 单复选框编码预设会自动编码为多屏幕播放所需的多个版本。<!-- [More information](http://help.adobe.com/en_US/scene7/using/WS1c46793299cf21d7-5abae30d131ddfed85f-8000.html).  -->
-* 基于HTTP的视频流。<!-- [More information](http://help.adobe.com/en_US/scene7/using/WS98ca2e6790647c0632156edd1369e58559f-8000.html).  -->
-* UGC（用户生成内容）视频的iOS流。<!-- [More information](http://help.adobe.com/en_US/scene7/using/WSe8b0455615e2dc47-2df907a712f31201b35-8000.html). -->
+* 为桌面增加了自适应流，以便根据用户的网络连接动态切换视频质量。 <!-- [More information](http://help.adobe.com/en_US/scene7/using/WS1c46793299cf21d7-6ad692c9131d90d137a-8000.html).  -->
+* 单复选框编码预设会自动编码为多屏幕播放所需的多个版本。 <!-- [More information](http://help.adobe.com/en_US/scene7/using/WS1c46793299cf21d7-5abae30d131ddfed85f-8000.html).  -->
+* 基于HTTP的视频流。 <!-- [More information](http://help.adobe.com/en_US/scene7/using/WS98ca2e6790647c0632156edd1369e58559f-8000.html).  -->
+* iOS流式传输UGC（用户生成的内容）视频。 <!-- [More information](http://help.adobe.com/en_US/scene7/using/WSe8b0455615e2dc47-2df907a712f31201b35-8000.html). -->
 
 **Media Portal**
 
@@ -122,7 +122,7 @@ ht-degree: 6%
 
 * 元数据架构
 
-   元数据架构定义元数据属性集。 元数据架构的每个属性都具有基本数据类型，如字符串、浮点、整数、日期或是/否。 此外，还可以定义列表、打开的选项或关闭的选项。 元数据架构可用于所有元数据工作流，如搜索、编辑、导入、元数据视图和元数据预设。<!-- [More information](http://help.adobe.com/en_US/scene7/using/WS259993e42159a215-1c6a66df1265272619e-7fec.html#WSd968ca97bf03cf72-5e3dd3a113268dc80f5-8000). -->
+   元数据架构定义元数据属性集。 元数据架构的每个属性都具有基本数据类型，如字符串、浮点、整数、日期或是/否。 此外，还可以定义列表、打开的选项或关闭的选项。 元数据架构可用于所有元数据工作流，如搜索、编辑、导入、元数据视图和元数据预设。 <!-- [More information](http://help.adobe.com/en_US/scene7/using/WS259993e42159a215-1c6a66df1265272619e-7fec.html#WSd968ca97bf03cf72-5e3dd3a113268dc80f5-8000). -->
 
    元数据架构是UDF的后继技术，专门用于自定义的元数据工作流，特别是在元数据服务器的上下文中。
 
@@ -132,7 +132,7 @@ ht-degree: 6%
    >
    >元数据服务器将从5月开始可用。 必须由支持部门启用。 元数据服务器当前仅在北美和欧洲可用。
 
-* 元数据服务器将资产的所有元数据字段的子集公开给面向公众的服务器，并可在此处由eCom页面或服务器请求。 此公开的元数据可以混合使用资产属性、UDF、XMP和元数据架构属性。 元数据服务器提供了具有多种搜索功能的WEB-API，例如搜索元数据、图像相似性，或两者兼有。 对于每个返回的资产，都会请求元数据属性的列表。<!-- [More information](http://help.adobe.com/en_US/scene7/using/WS1ffbb36e209a6fc9-44279087131d3ad5622-8000.html). -->
+* 元数据服务器将资产的所有元数据字段的子集公开给面向公众的服务器，并可在此处由eCom页面或服务器请求。 此公开的元数据可以混合使用资产属性、UDF、XMP和元数据架构属性。 元数据服务器提供了具有多种搜索功能的WEB-API，例如搜索元数据、图像相似性，或两者兼有。 对于每个返回的资产，都会请求元数据属性的列表。 <!-- [More information](http://help.adobe.com/en_US/scene7/using/WS1ffbb36e209a6fc9-44279087131d3ad5622-8000.html). -->
 * 元数据导入可以处理XMP属性
 
    扩展了元数据导入以处理在元数据架构中定义的XMP属性和属性。
@@ -141,7 +141,7 @@ ht-degree: 6%
    新增了一个名为“所有具有值的属性”的预定义元数据视图，该视图仅显示包含值的元属性。 没有值的属性(来自XMP、用户定义的字段或新的元数据架构)将处于隐藏状态且不会显示。
 * 元数据设置现在分组到管理用户界面中。
 
-   在&#x200B;**[!UICONTROL 设置>应用程序设置]**&#x200B;中，与元数据相关的设置页面现在分组到名为[!DNL Metadata]的顶级部分中。 在此，您可以找到元数据视图、元数据预设、元数据架构和用户定义的字段的设置页面。
+   在 **[!UICONTROL 设置>应用程序设置]**，则与元数据相关的设置页面现在分组到称为 [!DNL Metadata]. 在此，您可以找到元数据视图、元数据预设、元数据架构和用户定义的字段的设置页面。
 
 此桌面应用程序允许您导入现有的3D模型，并将其作为2D晕影文件进行创作。 生成的晕影文件可以上传到SPS，在SPS中可以根据需要替换颜色和纹理。
 
